# clang-type-erase

./: .clang-type-erase.config  .travis.yml  CMakeLists.txt  README.md  _config.yml  groups  project.config  run_test_in_docker.sh
files/: SmartPointerStorage.h  Storage.h  TypeErasureUtil.h  storage.h  type_erasure_util.h
tests/: CMakeLists.txt  Dockerfile  generate_given_interface  generate_tests.py  interface.hh  interface_test.form  mock_fooable.hh  non_copyable_interface_test.form  non_copyable_mock_fooable.hh  non_copyable_sbo_vtable_interface_test.form  non_copyable_vtable_interface_test.form  plain_interface.hh  run  sbo_interface_test.form  sbo_vtable_interface_test.form  util.hh  vtable_interface_test.form
tests/basic/: generate_interface  heap_allocations.cpp
tests/basic_non_copyable/: generate_interface  heap_allocations.cpp  interface_test.cpp
tests/cow/: generate_interface  heap_allocations.cpp  interface_test.cpp
tests/sbo/: generate_interface  heap_allocations.cpp
tests/sbo_cow/: generate_interface  heap_allocations.cpp  interface_test.cpp
tests/sbo_non_copyable/: generate_interface  heap_allocations.cpp  interface_test.cpp
tests/vtable_basic/: generate_interface  heap_allocations.cpp  interface_test.cpp
tests/vtable_basic_non_copyable/: generate_interface  heap_allocations.cpp
tests/vtable_cow/: generate_interface  heap_allocations.cpp  interface_test.cpp
tests/vtable_sbo/: generate_interface  heap_allocations.cpp  interface_test.cpp
tests/vtable_sbo_cow/: generate_interface  heap_allocations.cpp  interface_test.cpp
tests/vtable_sbo_non_copyable/: generate_interface  heap_allocations.cpp
tool/: CMakeLists.txt  ClangTypeEraseMain.cpp  Config.cpp  Config.h  InterfaceWriter.cpp  InterfaceWriter.h  PreprocessorCallback.cpp  PreprocessorCallback.h  SimpleInterfaceWriter.cpp  SimpleInterfaceWriter.h  TableWriter.cpp  TableWriter.h  TypeErasureWriter.cpp  TypeErasureWriter.h  Utils.cpp  Utils.h
utils/: CMakeLists.txt  Config.h
